tests/should_fail/bug/2040.rs
extern crate creusot_std;

pub fn f<T: Eq>(x: T) -> bool {
    x == x
}
