tests/should_fail/bug/2040.stderr
error[E0277]: the trait bound `T: creusot_std::model::DeepModel` is not satisfied
 --> 2040.rs:4:5
  |
4 |     x == x
  |     ^^^^^^ the trait `creusot_std::model::DeepModel` is not implemented for `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
